# DL-Classic-Models

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: fashion_mnist.yaml
configs/model/: mlp.yaml
configs/train/: default.yaml
scripts/: train.py
src/data/: fashion_mnist.py
src/models/: mlp.py
