[project]
name = "dl-classic-models"
version = "0.1.0"
description = "Implementation of classic deep learning models (MLP, CNN, RNN) from scratch."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch==2.4.0+cu121",
    "torchvision==0.19.0+cu121",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "numpy<2.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.14.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
extra-index-url = [
    "https://download.pytorch.org/whl/cu121"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"